--- a/MedicalLink/ChucNang/TOOL12_SuaPhieuCDDV/ucSuaPhieuCDDV.resx
+++ b/MedicalLink/ChucNang/TOOL12_SuaPhieuCDDV/ucSuaPhieuCDDV.resx
@@ -161,6 +161,16 @@
         RU5ErkJggg==
 </value>
   </data>
+  <data name="repositoryItemButton_XoaDV.Buttons" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAEDSURBVDhPzdMva0JxFMbxyxARg4jcYDIZfQkyRExikuELMQwREQ1DDMtDRAxmETGMcTEYfAWG
+        JRHj0oJBxHD9nnnGD8euf4sHPuGce87DFa7Wf1Wz3AwWWKslsvr4eLH4gC905Ui18A2/rh0WD3x4Rh1N
+        uOhoL9509qp9CSaMJgdZuMSTnv8EjLDBFqsTZEd2HT3fFwN5tXdtPYudPprammJYlQAEMEMcEtpATGch
+        DHA0IAj5jQm00YOEySwCCWjomSmG9xHwgasDKjgnYAjPAAc3BYzhh3zOUeRRgK0zCZeP7kXPTDEsYo40
+        HpH8Q2YpfKKsZ6YYhjHB71/YyxT2/sqydhWcdLwEdn3OAAAAAElFTkSuQmCC
+</value>
+  </data>
   <data name="repositoryItemButtonDelete.Buttons" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
